chore: update gitignore to include pnpm files

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,7 @@ node_modules
 /connect.lock
 /coverage
 /libpeerconnection.log
-npm-debug.log
-yarn-error.log
+.pnpm-debug.log
 testem.log
 /typings
 
