chore: bootstrap Nest.js services

--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "11.9.2",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "14.4.3",
     "@nrwl/cypress": "14.4.3",
     "@nrwl/eslint-plugin-nx": "14.4.3",
     "@nrwl/jest": "14.4.3",
     "@nrwl/js": "14.4.3",
     "@nrwl/linter": "14.4.3",
+    "@nrwl/nest": "^14.4.3",
     "@nrwl/next": "^14.4.3",
+    "@nrwl/node": "14.4.3",
     "@nrwl/react": "14.4.3",
     "@nrwl/web": "14.4.3",
     "@nrwl/workspace": "14.4.3",
@@ -51,12 +55,17 @@
     "@emotion/react": "11.9.3",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.9.3",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@nrwl/next": "14.4.3",
     "core-js": "^3.6.5",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   }
 }
