--- a/apps/clients/web/project.json
+++ b/apps/clients/web/project.json
@@ -23,7 +23,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "clients-web:build",
-        "dev": true
+        "dev": true,
+        "proxyConfig": "apps/clients/web/proxy.conf.json"
       },
       "configurations": {
         "development": {
