--- a/apps/clients/web/.eslintrc.json
+++ b/apps/clients/web/.eslintrc.json
@@ -5,7 +5,7 @@
     "next/core-web-vitals",
     "../../../.eslintrc.json"
   ],
-  "ignorePatterns": ["!**/*"],
+  "ignorePatterns": ["!**/*", "node_modules"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
