--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
     "@nestjs/core": "^9.0.5",
     "@nestjs/platform-fastify": "^9.0.5",
     "@nrwl/next": "14.4.3",
+    "@prisma/client": "^4.1.0",
     "core-js": "^3.6.5",
     "next": "12.1.6",
+    "prisma": "^4.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reflect-metadata": "^0.1.13",
