feat: add swagger API documentation

--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "@emotion/react": "11.9.3",
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.9.3",
+    "@fastify/static": "^6.4.1",
     "@nestjs/common": "^9.0.5",
     "@nestjs/core": "^9.0.5",
     "@nestjs/platform-fastify": "^9.0.5",
+    "@nestjs/swagger": "^6.0.4",
     "@nrwl/next": "14.4.3",
     "@prisma/client": "^4.1.0",
     "core-js": "^3.6.5",
