--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "@nestjs/swagger": "^6.0.4",
     "@nrwl/next": "14.4.3",
     "@prisma/client": "^4.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
     "next": "12.1.6",
     "prisma": "^4.1.0",
