--- a/apps/api/users/.env
+++ b/apps/api/users/.env
@@ -4,5 +4,9 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# General
 API_VERSION=1.0.0
 DATABASE_URL="file:./db/dev.db"
+
+# Auth
+AUTH_SALT_SECRET="dev-secret-salt"
