feat: implement logic for users/login

--- a/apps/api/users/.env
+++ b/apps/api/users/.env
@@ -9,4 +9,6 @@ API_VERSION=1.0.0
 DATABASE_URL="file:./db/dev.db"
 
 # Auth
-AUTH_SALT_SECRET="dev-secret-salt"
+AUTH_SALT_SECRET="salt-secret"
+AUTH_JWT_SECRET="jwt-secret"
+AUTH_JWT_EXP=1d
