--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@emotion/styled": "11.9.3",
     "@fastify/static": "^6.4.1",
     "@nestjs/common": "^9.0.5",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.5",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.5",
     "@nestjs/swagger": "^6.0.4",
     "@nrwl/next": "14.4.3",
