--- a/apps/api/instruments/.env
+++ b/apps/api/instruments/.env
@@ -1,2 +1,11 @@
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
 # General
 API_VERSION=1.0.0
+DATABASE_URL="file:./db/dev.db"
