enh: restructure prisma setup

--- a/apps/api/instruments/package.json
+++ b/apps/api/instruments/package.json
@@ -6,8 +6,5 @@
   "author": "",
   "license": "CC0",
   "private": true,
-  "scripts": {},
-  "prisma": {
-    "schema": "./prisma/schema.prisma"
-  }
+  "scripts": {}
 }
