chore: add cron & bull packages for nest

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nrwl/web": "14.4.3",
     "@nrwl/workspace": "14.4.3",
     "@testing-library/react": "13.3.0",
+    "@types/bull": "^3.15.8",
+    "@types/cron": "^2.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.14",
@@ -59,14 +61,17 @@
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.9.3",
     "@fastify/static": "^6.4.1",
+    "@nestjs/bull": "^0.6.0",
     "@nestjs/common": "^9.0.5",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.5",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.5",
+    "@nestjs/schedule": "^2.1.0",
     "@nestjs/swagger": "^6.0.4",
     "@nrwl/next": "14.4.3",
     "@prisma/client": "^4.1.0",
+    "bull": "^4.8.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
