--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@emotion/server": "11.4.0",
     "@emotion/styled": "11.9.3",
     "@fastify/static": "^6.4.1",
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/bull": "^0.6.0",
     "@nestjs/common": "^9.0.5",
     "@nestjs/config": "^2.2.0",
